Prevent mobile page overflow and enable MathJax scroll

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,6 +21,13 @@ body {
   }
 }
 
+@include breakpoint(max-width $medium) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 1em 0 0.5em;
   line-height: 1.2;
